# Auto_aim_24

armor_auto_aim/armor_detector/: package.xml
armor_auto_aim/armor_detector/src/: detector_node.cpp
armor_auto_aim/armor_tracker/: CMakeLists.txt
armor_auto_aim/armor_tracker/include/armor_tracker/: outpost_height_model.hpp  tracker.hpp
armor_auto_aim/armor_tracker/src/: tracker.cpp  tracker_node.cpp
armor_auto_aim/armor_tracker/test/: outpost_height_model_test.cpp  outpost_tracker_geometry_test.cpp
auto_aim/config/: config.yaml
auto_aim/include/auto_aim/: tf2_node.hpp
auto_aim/src/: tf2_node.cpp
rune_auto_aim/rune_detector/: package.xml
rune_auto_aim/rune_detector/include/rune_detector/: detector_node.hpp
sensor/camera/: CMakeLists.txt  package.xml
sensor/camera/include/camera/: mindvision.hpp
